--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/styles/style.css">
     <link rel="stylesheet" href="/styles/header.css">
     <link rel="stylesheet" href="/styles/home.css">
+    <link rel="stylesheet" href="/styles/menu.css">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
         integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
@@ -92,7 +93,7 @@
 
         <section id="menu">
             <h2 class="section-title">Cardápio</h2>
-            <h3 class="section_subtitle">Nossos pratos especiais</h3>
+            <h3 class="section-subtitle">Nossos pratos especiais</h3>
 
             <div id="dishes">
                 <div class="dish">
@@ -100,16 +101,14 @@
                         <i class="fa-solid fa-heart"></i>
                     </div>
 
-                    <img src="images/dish.png" class="dish-heart" alt="">
+                    <img src="images/dish.png" class="dish-image" alt="">
 
                     <h3 class="dish-title">
-                        Lorem ipsum
+                        Lorem Ipsum
                     </h3>
 
                     <span class="dish-description">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti error, reprehenderit odio
-                        dolores nulla repellat distinctio sed cumque molestias veniam delectus! Dolore libero aliquam
-                        fugiat, nihil alias doloribus? Quae, explicabo.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     </span>
 
                     <div class="dish-rate">
@@ -134,16 +133,14 @@
                         <i class="fa-solid fa-heart"></i>
                     </div>
 
-                    <img src="images/dish2.png" class="dish-heart" alt="">
+                    <img src="images/dish2.png" class="dish-image" alt="">
 
                     <h3 class="dish-title">
-                        Lorem ipsum
+                        Lorem Ipsum
                     </h3>
 
                     <span class="dish-description">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti error, reprehenderit odio
-                        dolores nulla repellat distinctio sed cumque molestias veniam delectus! Dolore libero aliquam
-                        fugiat, nihil alias doloribus? Quae, explicabo.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     </span>
 
                     <div class="dish-rate">
@@ -168,16 +165,14 @@
                         <i class="fa-solid fa-heart"></i>
                     </div>
 
-                    <img src="images/dish3.png" class="dish-heart" alt="">
+                    <img src="images/dish3.png" class="dish-image" alt="">
 
                     <h3 class="dish-title">
-                        Lorem ipsum
+                        Lorem Ipsum
                     </h3>
 
                     <span class="dish-description">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti error, reprehenderit odio
-                        dolores nulla repellat distinctio sed cumque molestias veniam delectus! Dolore libero aliquam
-                        fugiat, nihil alias doloribus? Quae, explicabo.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     </span>
 
                     <div class="dish-rate">
@@ -202,16 +197,14 @@
                         <i class="fa-solid fa-heart"></i>
                     </div>
 
-                    <img src="images/dish4.png" class="dish-heart" alt="">
+                    <img src="images/dish4.png" class="dish-image" alt="">
 
                     <h3 class="dish-title">
-                        Lorem ipsum
+                        Lorem Ipsum
                     </h3>
 
                     <span class="dish-description">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti error, reprehenderit odio
-                        dolores nulla repellat distinctio sed cumque molestias veniam delectus! Dolore libero aliquam
-                        fugiat, nihil alias doloribus? Quae, explicabo.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     </span>
 
                     <div class="dish-rate">
